<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.sky.justnews.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_articleFragment"
            app:destination="@id/articleFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.sky.justnews.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_navigation_search_to_articleFragment"
            app:destination="@id/articleFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_bookmarks"
        android:name="com.sky.justnews.ui.bookmarks.BookmarksFragment"
        android:label="@string/title_bookmarks"
        tools:layout="@layout/fragment_bookmarks" >
        <action
            android:id="@+id/action_navigation_bookmarks_to_articleFragment"
            app:destination="@id/articleFragment" />
    </fragment>
    <fragment
        android:id="@+id/articleFragment"
        android:name="com.sky.justnews.ui.article.ArticleFragment"
        android:label="@string/article_fragment"
        tools:layout="@layout/fragment_article" >
        <argument
            android:name="article"
            app:argType="com.sky.justnews.models.Article" />
    </fragment>

</navigation>